--- a/layoutstyle.css
+++ b/layoutstyle.css
@@ -65,7 +65,8 @@ header h4 {
 
 section#about {
     width: 100vw;
-    height: 100vh;
+    height: auto;
+    min-height: 100vh;
     background-color: #FFFBF4;
     display: flex;
     flex-direction: column;
@@ -117,7 +118,8 @@ section#about div.conteudo-about p {
 
 section#portfolio{
     width: 100vw;
-    height: 100vh;
+    height: auto;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -147,7 +149,7 @@ section#portfolio div div img {
     
 /* Estilo Social */
 section#social {
-    height: 50vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -220,7 +222,7 @@ footer {
 @media (min-width: 760px) {
     header {
         width: 100vw;
-        height:100vh;
+        height: 100vh;
         background-image: url("background2.jpg");
         background-position-y: -20px;
         background-size: cover;
